--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,48 @@
 
 {% block content%}
 
-<div class="col-md-6 offset-md-3">
 {% if user.is_authenticated %}
 
-<h1>Hello World</h1>
+<h1>Records</h1>
+<table class="table table-striped table-hover table-bordered ">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Adress</th>
+      <th scope="col">city</th>
+      <th scope="col">State</th>
+      <th scope="col">Zipcode</th>
+      <th scope="col">Created_at</th>
+      <th scope="col">ID</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% if records %}
+    {% for record in records%}
+    <tr>
+      <td>{{ record.first_name }}
+    {{ record.last_name }}</td>
+      <td>{{ record.email }}</td>
+      <td>{{ record.phone }}</td>
+      <td>{{ record.address }}</td>
+      <td>{{ record.city }}</td>
+      <td>{{ record.state }}</td>
+      <td>{{ record.zipcode }}</td>
+      <td>{{ record.created_at }}</td>
+      <td>{{ record.id }}</td>
+      </tr>
+{% endfor %}
+{% endif %}
+     
+    
+    </tr>
+    
+  </tbody>
+</table>
+
+
 
 {% else %}
 <h1>Login</h1>
@@ -26,6 +64,6 @@
 </form>
 
 {% endif %}
-</div>
+
 
 {% endblock %}
