--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
       <td>{{ record.state }}</td>
       <td>{{ record.zipcode }}</td>
       <td>{{ record.created_at }}</td>
-      <td>{{ record.id }}</td>
+      <td><a href="{% url 'record' record.id %}">{{ record.id }}</a></td>
       </tr>
 {% endfor %}
 {% endif %}
@@ -46,6 +46,7 @@
 
 
 {% else %}
+<div class="col-md-6 offset-md-3">
 <h1>Login</h1>
 
 <form method="POST" action="{% url 'home' %}">
@@ -62,6 +63,8 @@
       <button type="submit" class="btn btn-secondary">Login</button>
 
 </form>
+
+</div>
 
 {% endif %}
 
